@@ -5,7 +5,6 @@
 		name="id"
 		type="text"
 		default="0"
-		required="true"
 		label="JGLOBAL_FIELD_ID_LABEL"
 		description ="JGLOBAL_FIELD_ID_DESC"
 		class="readonly"
