@@ -7,7 +7,6 @@
 			description="JGLOBAL_FIELD_ID_DESC"
 			size="10"
 			default="0"
-			required="true"
 			readonly="true"
 			class="readonly"
 		/>
