@@ -7,7 +7,6 @@
 			description="JGLOBAL_FIELD_ID_DESC"
 			label="JGLOBAL_FIELD_ID_LABEL"
 			default="0"
-			required="true"
 			readonly="true"
 		/>
 
