@@ -10,7 +10,6 @@
 			description ="JGLOBAL_FIELD_ID_DESC"
 			default="0"
 			filter="int"
-			required="true"
 			readonly="true"/>
 
 		<field
