@@ -5,7 +5,7 @@
 	-->
 <form>
 	<fieldset>
-		<field name="id" type="text" default="0" required="true"
+		<field name="id" type="text" default="0" 
 			readonly="true" class="readonly" label="JGLOBAL_FIELD_ID_LABEL"
 			description="JGLOBAL_FIELD_ID_DESC" />
 
