@@ -3,13 +3,14 @@
 <form>
 	<fieldset>
 		<field
+			id="id"
 			name="id"
-			label="JGLOBAL_FIELD_ID_LABEL"
-			description ="JGLOBAL_FIELD_ID_DESC"
-			type="hidden"
+			type="text"
 			default="0"
-			required="true"
-			readonly="true" />
+			readonly="true"
+			class="readonly"
+			label="JGLOBAL_FIELD_ID_LABEL"
+			description ="JGLOBAL_FIELD_ID_DESC" />
 
 		<field
 			name="template"
