@@ -100,8 +100,7 @@
 			type="text"
 			class="readonly"
 			label="JGLOBAL_FIELD_ID_LABEL"
-			description ="JGLOBAL_FIELD_ID_DESC"
-			required="true"
+			description ="JGLOBAL_FIELD_ID_DESC"		
 			default="0"
 			readonly="true"
 			/>
