@@ -4,7 +4,7 @@
 	-->
 <form>
 	<fieldset>
-		<field name="id" type="text" default="0" label="JGLOBAL_FIELD_ID_LABEL" required="true"
+		<field name="id" type="text" default="0" label="JGLOBAL_FIELD_ID_LABEL" 
 			readonly="true" class="readonly" />
 
 		<field name="title" type="text" class="inputbox"
