@@ -9,8 +9,7 @@
 			class="inputbox"
 			label="COM_CONTENT_ID_LABEL"
 			size="10"
-			default="0"
-			required="true"
+			default="0"			
 			readonly="true" />
 
 		<field
